fix dark mode logic & fix tailwind import

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -541,6 +541,41 @@ html {
   --b1: 100% 0 0;
 }
 
+@media (prefers-color-scheme: dark) {
+  :root {
+    color-scheme: dark;
+    --b2: 23.0416% 0 0;
+    --b3: 21.3072% 0 0;
+    --bc: 84.9552% 0 0;
+    --sc: 89.196% 0.0496 305.03;
+    --nc: 84.8742% 0.009322 65.681484;
+    --inc: 90.923% 0.043042 262.880917;
+    --suc: 12.541% 0.033982 149.213788;
+    --wac: 13.3168% 0.031484 58.31834;
+    --erc: 13.144% 0.0398 27.33;
+    --rounded-box: 1rem;
+    --rounded-btn: 0.5rem;
+    --rounded-badge: 1.9rem;
+    --animation-btn: 0.25s;
+    --animation-input: .2s;
+    --btn-focus-scale: 0.95;
+    --border-btn: 1px;
+    --tab-border: 1px;
+    --tab-radius: 0.5rem;
+    --p: 77.48% 0.204 60.62;
+    --pc: 19.6935% 0.004671 196.779412;
+    --s: 45.98% 0.248 305.03;
+    --a: 64.8% 0.223 136.073479;
+    --ac: 0% 0 0;
+    --n: 24.371% 0.046608 65.681484;
+    --b1: 24.7759% 0 0;
+    --in: 54.615% 0.215208 262.880917;
+    --su: 62.7052% 0.169912 149.213788;
+    --wa: 66.584% 0.157422 58.31834;
+    --er: 65.72% 0.199 27.33;
+  }
+}
+
 [data-theme=bumblebee] {
   color-scheme: light;
   --b2: 93% 0 0;
@@ -3297,16 +3332,6 @@ html {
 .text-yellow-600 {
   --tw-text-opacity: 1;
   color: rgb(202 138 4 / var(--tw-text-opacity));
-}
-
-.text-neutral {
-  --tw-text-opacity: 1;
-  color: var(--fallback-n,oklch(var(--n)/var(--tw-text-opacity)));
-}
-
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .opacity-0 {
